--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
 
     <body>
-    <h1>Welcome to Applied Programming Languages</h1>
+    <h1>Welcome to Applied Programming Languages</h1><br />
+	This is some text I have added.
+
+
+
+
     </body>
 </html>
